@@ -38,6 +38,8 @@ class Config(object):
         master_doc = ('contents', 'env'),
         source_suffix = ('.rst', 'env'),
         source_encoding = ('utf-8-sig', 'env'),
+        exclude_patterns = ([], 'env'),
+        # the next three are all deprecated now
         unused_docs = ([], 'env'),
         exclude_trees = ([], 'env'),
         exclude_dirnames = ([], 'env'),
