@@ -1,6 +1,10 @@
 Release 1.0 (in development)
 ============================
 
+* The new universal config value ``exclude_patterns`` makes the
+  old ``unused_docs``, ``exclude_trees`` and ``exclude_dirnames``
+  obsolete.
+
 * Remove the deprecated ``exclude_dirs`` config value.
 
 * #129: Wrap toctrees in a div tag with class ``toctree-wrapper``
